--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
-body {
+body,
+#desc {
     font-family: 'Georgia', 'Garamond', Times, serif;
     text-align: center;
 }
@@ -10,7 +11,14 @@ h1 {
     font-weight: 1000px;
 }
 
-ul {
+#recipe-list {
     font-size: 22px;
     font-weight: bold;
+    text-align: center;
+}
+
+ul,
+ol,
+h2 {
+    text-align: left;
 }
