--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,13 @@ h2 {
     text-align: left;
 }
 
-li {
+.recipe-link {
     margin: 48px;
     list-style: none;
+}
+
+#desc {
+    border: 2px goldenrod solid;
+    padding: 6px;
+    color: goldenrod;
 }
